--- a/index.html
+++ b/index.html
@@ -135,9 +135,12 @@
                         <li><a href="/blog"
                                 class="no-underline text-gray-900 font-medium hover:text-primary-600 transition-colors">Blog</a>
                         </li>
+                        <li>
+                            <a href="/" class="bg-primary-600 text-white px-6 py-3 rounded-lg no-underline font-semibold transition-all duration-300 hover:bg-primary-700 hover:-translate-y-0.5 hover:shadow-md focus:outline-none focus:ring-2 focus:ring-primary-600 focus:ring-offset-2">Generate Login Free</a>
+                        </li>
                     </ul>
 
-                    <a href="#hero-cta" class="bg-primary-600 text-white px-6 py-3 rounded-lg no-underline font-semibold transition-all duration-300 hover:bg-primary-700 hover:-translate-y-0.5 hover:shadow-md focus:outline-none focus:ring-2 focus:ring-primary-600 focus:ring-offset-2">Generate Login Free</a>
+                    
 
                     <!-- Toggle Button -->
                     <button id="mobile-menu-toggle"
@@ -161,6 +164,9 @@
                             Works</a></li>
                     <li><a href="/blog"
                             class="block text-gray-900 font-medium hover:text-primary-600 transition-colors">Blog</a></li>
+                    <li class="my-4">
+                        <a href="/" class="bg-primary-600 text-white px-6 py-3 rounded-lg no-underline font-semibold transition-all duration-300 hover:bg-primary-700 hover:-translate-y-0.5 hover:shadow-md focus:outline-none focus:ring-2 focus:ring-primary-600 focus:ring-offset-2">Generate Login Free</a>
+                    </li>
                 </ul>
             </div>
         </div>
